crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__clausedelimiter.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "When",
                  "type": "text"
                }
              ],
              "raw_text": "When",
              "span": {
                "end": 158,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "span": {
                "end": 162,
                "start": 159
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "are",
                  "type": "text"
                }
              ],
              "raw_text": "are",
              "span": {
                "end": 166,
                "start": 163
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "stupid",
                  "type": "text"
                }
              ],
              "raw_text": "stupid",
              "span": {
                "end": 173,
                "start": 167
              },
              "type": "word"
            },
            {
              "text": "c",
              "type": "freecode"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 184,
                "start": 180
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "makes",
                  "type": "text"
                }
              ],
              "raw_text": "makes",
              "span": {
                "end": 190,
                "start": 185
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "no",
                  "type": "text"
                }
              ],
              "raw_text": "no",
              "span": {
                "end": 193,
                "start": 191
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "sense",
                  "type": "text"
                }
              ],
              "raw_text": "sense",
              "span": {
                "end": 199,
                "start": 194
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
