crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__codes.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "text": "freecode 1",
              "type": "freecode"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 173,
                "start": 169
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 176,
                "start": 174
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "child",
                  "type": "text"
                }
              ],
              "raw_text": "child",
              "span": {
                "end": 182,
                "start": 177
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "speaking",
                  "type": "text"
                }
              ],
              "raw_text": "speaking",
              "span": {
                "end": 191,
                "start": 183
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "text": "freecode 2",
              "type": "freecode"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 219,
                "start": 215
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 222,
                "start": 220
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "child",
                  "type": "text"
                }
              ],
              "raw_text": "child",
              "span": {
                "end": 228,
                "start": 223
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "speaking",
                  "type": "text"
                }
              ],
              "raw_text": "speaking",
              "span": {
                "end": 237,
                "start": 229
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "text": "freecode 1",
              "type": "freecode"
            },
            {
              "text": "freecode 2",
              "type": "freecode"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 280,
                "start": 276
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 283,
                "start": 281
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "child",
                  "type": "text"
                }
              ],
              "raw_text": "child",
              "span": {
                "end": 289,
                "start": 284
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "speaking",
                  "type": "text"
                }
              ],
              "raw_text": "speaking",
              "span": {
                "end": 298,
                "start": 290
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 311,
                "start": 307
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 314,
                "start": 312
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "child",
                  "type": "text"
                }
              ],
              "form_type": "x",
              "raw_text": "child@x",
              "span": {
                "end": 322,
                "start": 315
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "speaking",
                  "type": "text"
                }
              ],
              "raw_text": "speaking",
              "span": {
                "end": 331,
                "start": 323
              },
              "type": "word"
            }
          ],
          "postcodes": [
            {
              "text": "post1 arg"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 358,
                "start": 354
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 361,
                "start": 359
              },
              "type": "word"
            },
            {
              "text": "huh",
              "type": "freecode"
            },
            {
              "content": [
                {
                  "content": "mother",
                  "type": "text"
                }
              ],
              "raw_text": "mother",
              "span": {
                "end": 376,
                "start": 370
              },
              "type": "word"
            },
            {
              "text": "right",
              "type": "freecode"
            },
            {
              "content": [
                {
                  "content": "speaking",
                  "type": "text"
                }
              ],
              "raw_text": "speaking",
              "span": {
                "end": 395,
                "start": 387
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 408,
                "start": 404
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 411,
                "start": 409
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "child",
                  "type": "text"
                }
              ],
              "form_type": "x",
              "raw_text": "child@x",
              "span": {
                "end": 419,
                "start": 412
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "speaking",
                  "type": "text"
                }
              ],
              "raw_text": "speaking",
              "span": {
                "end": 428,
                "start": 420
              },
              "type": "word"
            }
          ],
          "postcodes": [
            {
              "text": "post2 arg"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 455,
                "start": 451
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 458,
                "start": 456
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "child",
                  "type": "text"
                }
              ],
              "form_type": "x",
              "raw_text": "child@x",
              "span": {
                "end": 466,
                "start": 459
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "speaking",
                  "type": "text"
                }
              ],
              "raw_text": "speaking",
              "span": {
                "end": 475,
                "start": 467
              },
              "type": "word"
            }
          ],
          "postcodes": [
            {
              "text": "post1 arg"
            },
            {
              "text": "post2 arg"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
